--- a/deltify.css
+++ b/deltify.css
@@ -900,6 +900,10 @@ footer .logo {
     overflow-x: hidden;
   }
 
+  .logo {
+    margin-right: 112px;
+}
+
   header {
     width: 100%;
     margin-right: 10px;
@@ -952,7 +956,7 @@ footer .logo {
   }
 
   .DescList ul li {
-    list-style: url(/images/Vector\\(1\).png);
+    list-style: url('/images/Vector\\(1\).png');
     font-family: var(---mainFont);
     font-size: 14px;
     font-weight: 600;
@@ -1096,6 +1100,10 @@ footer .logo {
   body {
     overflow-x: hidden;
   }
+
+  .logo {
+    margin-right: 112px;
+}
 
   header {
     width: 100%;
@@ -1289,6 +1297,10 @@ footer .logo {
   body {
     overflow-x: hidden;
   }
+
+  .logo {
+    margin-right: 112px;
+}
 
   header {
     width: 100%;
@@ -1515,6 +1527,10 @@ footer .logo {
     overflow-x: hidden;
   }
 
+  .logo {
+    margin-right: 112px;
+}
+
   header {
     width: 100%;
     margin-right: 10px;
@@ -1725,6 +1741,10 @@ footer .logo {
   body {
     overflow-x: hidden;
   }
+
+  .logo {
+    margin-right: 112px;
+}
 
   header {
     width: 100%;
@@ -1958,4 +1978,8 @@ footer .logo {
   .hedss {
     padding-left: 35px;
   }
+
+  .logo {
+    margin-right: 112px;
+}
 }
